2010-04-15 0.0.11 Aleksandar Urošević <urke@users.sourceforge.net>

	* Added option to filter categories on category archive
	* Added option to display thumbnails with excerpts
	* Added option to display standalone link to category archive
	* Better terminology

2010-01-07 0.0.10 Aleksandar Urošević <urke@users.sourceforge.net>

	* Added option to display two or only one column per row (full width)

2009-10-09 0.0.9  Aleksandar Urošević <urke@users.sourceforge.net>

	* Fixed XHTML validation error for div class
	* Added full post title as link title

2009-09-26 0.0.8  Aleksandar Urošević <urke@users.sourceforge.net>

	* Replaced category and psot URI with permalink
	* Added option to display excerpt for first article only, for all articles or not display at all
	* Added option to shorten excerpts to specified length (in characters)
	* Added option to shorten post title to specified length (in characters)
	* Added options for custom categories to include/exclude
	* Moved Settings links in plugin actions
	* Fixed and improved ppc.css and ppc-list.css StyleSheets

2009-03-04 0.0.7  Aleksandar Urošević <urke@users.sourceforge.net>

	* Posts per Cat added to WordPress plugin repository
	* Fixed broken category URI on non-index pages
	* Added ppc action hook

2009-03-03 0.0.6  Aleksandar Urošević <urke@users.sourceforge.net>

	* Fixed SCC URI on non-index pages

2009-02-20 0.0.5  Aleksandar Urošević <urke@users.sourceforge.net>

	* Added plugin option to disable usage of CSS StyleSheet for list styles

2009-02-20 0.0.4  Aleksandar Urošević <urke@users.sourceforge.net>

	* Fixed CSS positioning problem

2009-02-16 0.0.3  Aleksandar Urošević <urke@users.sourceforge.net>

	* Published first public release
	* Added Settings page
	* Gettexturized (enabled localisation)

2009-02-10 0.0.2  Aleksandar Urošević <urke@users.sourceforge.net>

	* Code packed from functions.php to plugin

2009-02-02 0.0.1  Aleksandar Urošević <urke@users.sourceforge.net>

	* Project initialized