@@ -1,5 +1,6 @@
-2010-04-15 0.0.11 Aleksandar Urošević <urke@users.sourceforge.net>
+2010-04-24 0.0.11 Aleksandar Urošević <urke@users.sourceforge.net>
 
+	* Added dirty hack for seervers w/o mb_strlen()
 	* Added option to filter categories on category archive
 	* Added option to display thumbnails with excerpts
 	* Added option to display standalone link to category archive
